<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PopUpCompra">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="22dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_intermediario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compra_intermediario"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/rg_intermediario"

                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rg_intermediario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_intermediario">

                <RadioButton
                    android:id="@+id/rb_steam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compra_steam"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rb_epic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compra_epic"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rb_nakama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compra_nakama"
                    android:textColor="@color/white" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_resumen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/compra_resumen"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg_intermediario" />

            <TextView
                android:id="@+id/tv_subtotal_leyenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/compra_subtotal"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_resumen" />

            <TextView
                android:id="@+id/tv_descuento_leyenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/compra_descuento"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_subtotal_leyenda"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtotal_leyenda" />

            <TextView
                android:id="@+id/tv_recargo_leyenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/compra_recargo"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_descuento_leyenda"
                app:layout_constraintTop_toBottomOf="@+id/tv_descuento_leyenda" />

            <TextView
                android:id="@+id/tv_total_leyenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/compra_total"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_recargo_leyenda"
                app:layout_constraintTop_toBottomOf="@+id/tv_recargo_leyenda" />

            <TextView
                android:id="@+id/tv_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compra_monto"
                android:textColor="@color/white2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_subtotal_leyenda" />

            <TextView
                android:id="@+id/tv_descuento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compra_monto"
                android:textColor="@color/white2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_subtotal"
                app:layout_constraintTop_toTopOf="@+id/tv_descuento_leyenda" />

            <TextView
                android:id="@+id/tv_comision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compra_monto"
                android:textColor="@color/white2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_descuento"
                app:layout_constraintTop_toTopOf="@+id/tv_recargo_leyenda" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compra_monto"
                android:textColor="@color/white2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_comision"
                app:layout_constraintTop_toTopOf="@+id/tv_total_leyenda" />

            <Button
                android:id="@+id/popup_btn_comprar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/compra_confirmar"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_leyenda"
                tools:layout_editor_absoluteX="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>