<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_rounded"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/game_item_image"
            android:layout_width="85dp"
            android:layout_height="111dp"
            android:adjustViewBounds="true"
            android:background="@drawable/portada"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundImage"
            app:srcCompat="@drawable/game" />

        <TextView
            android:id="@+id/game_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/game_placeholder_nombre"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/game_item_image"
            app:layout_constraintTop_toTopOf="@+id/game_item_image" />

        <TextView
            android:id="@+id/game_item_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_placeholder_genero"
            android:textColor="@color/white2"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/game_item_name"
            app:layout_constraintTop_toBottomOf="@+id/game_item_name" />

        <ImageView
            android:id="@+id/game_item_estrella"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/game_item_rating"
            app:layout_constraintStart_toEndOf="@+id/game_item_image"
            app:layout_constraintTop_toTopOf="@+id/game_item_rating"
            app:srcCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/game_item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/game_placeholder_rating"
            android:textColor="@color/white2"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_game_ver"
            app:layout_constraintStart_toEndOf="@+id/game_item_estrella"
            app:layout_constraintTop_toTopOf="@+id/btn_game_ver" />

        <Button
            android:id="@+id/btn_game_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/game_boton_ver"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

