<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.teamanotador.gamesbreak.GameActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/iv_boton_volver"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:padding="4dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/circle_light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_back" />

                <TextView
                    android:id="@+id/tv_game_titulo_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_juego"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_boton_volver"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_boton_volver" />

                <io.github.florent37.shapeofview.shapes.RoundRectView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="40dp"
                    android:elevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_game_titulo_top"
                    app:shape_roundRect_bottomLeftRadius="14dp"

                    app:shape_roundRect_bottomRightRadius="14dp"
                    app:shape_roundRect_topLeftRadius="14dp"
                    app:shape_roundRect_topRightRadius="14dp"
                    app:srcCompat="@drawable/game">

                    <ImageView
                        android:id="@+id/iv_game_portada"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/game" />

                </io.github.florent37.shapeofview.shapes.RoundRectView>


                <TextView
                    android:id="@+id/tv_game_titulo"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:inputType="textPersonName"
                    android:text="@string/game_placeholder_nombre"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView11"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/iv_game_estrella"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_game_titulo"
                    app:layout_constraintEnd_toStartOf="@+id/tv_game_calificacion"
                    app:layout_constraintTop_toTopOf="@+id/tv_game_titulo"
                    app:srcCompat="@drawable/ic_star" />

                <TextView
                    android:id="@+id/tv_game_calificacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/game_placeholder_rating"
                    android:textColor="@color/white2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_game_estrella"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_game_estrella" />

                <TextView
                    android:id="@+id/tv_game_genero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/game_placeholder_genero"
                    android:textColor="@color/white2"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_game_titulo"
                    app:layout_constraintTop_toBottomOf="@+id/tv_game_titulo" />

                <TextView
                    android:id="@+id/tv_game_descripcion_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/game_descripcion"
                    android:textColor="@color/white2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_game_genero" />

                <TextView
                    android:id="@+id/tv_game_descripcion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="22dp"
                    android:text="Vestibulum quis pellentesque orci. In tempus et metus vitae pretium. Ut sed odio at odio accumsan hendrerit sit amet sit amet lacus. Pellentesque dictum consectetur tortor non ullamcorper. Sed et neque tristique dolor maximus commodo. Sed vel purus ac ipsum luctus iaculis"
                    android:textColor="@color/white2"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_game_descripcion_titulo"
                    app:layout_constraintTop_toBottomOf="@+id/tv_game_descripcion_titulo" />

                <TextView
                    android:id="@+id/tv_game_precio_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/game_precio"
                    android:textColor="@color/white2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_game_descripcion"
                    app:layout_constraintTop_toBottomOf="@+id/tv_game_descripcion" />

                <TextView
                    android:id="@+id/tv_game_precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/game_placeholder_precio"
                    android:textColor="@color/white2"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_game_precio_titulo"
                    app:layout_constraintTop_toBottomOf="@+id/tv_game_precio_titulo" />

                <Button
                    android:id="@+id/btn_comprar"
                    android:layout_width="155dp"
                    android:layout_height="55dp"
                    android:text="@string/game_comprar"
                    android:background="@drawable/button"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_game_precio"
                    app:layout_constraintEnd_toEndOf="@+id/tv_game_descripcion"
                    app:layout_constraintTop_toTopOf="@+id/tv_game_precio" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>